Last minute commit

--- a/editor/test/examples/editor_uml2.2.xhtml
+++ b/editor/test/examples/editor_uml2.2.xhtml
@@ -23,7 +23,8 @@
 		
         <!-- oryx editor -->
         <script src="i18n/translation_en_us.js" type="text/javascript"/>
-		<script src="oryx.debug.js" type="text/javascript" />
+	<script src="oryx.debug.js" type="text/javascript" />
+		<script src="plugins/scripts/uml.js" type="text/javascript"></script>
 
         <link rel="Stylesheet" media="screen" href="css/theme_norm.css" type="text/css" />
 
@@ -34,7 +35,7 @@
         <link rel="schema.oryx" href="http://oryx-editor.org/" />
         <link rel="schema.raziel" href="http://raziel.org/" />
 
-		<meta name="oryx.type" content="http://b3mn.org/stencilset/uml2.2#UMLDiagram" />
+		<meta name="oryx.type" content="http://b3mn.org/stencilset/UML2.2Class#Diagram" />
     </head>
 
     <body style="display: block; overflow: hidden;">
