--- a/editor/test/examples/editor_adonis.xhtml
+++ b/editor/test/examples/editor_adonis.xhtml
@@ -24,6 +24,7 @@
         <!-- oryx editor -->
         <script src="i18n/translation_en_us.js" type="text/javascript"/>
 		<script src="oryx.debug.js" type="text/javascript" />
+		<script src="plugins/scripts/adonissupport.js" type="text/javascript"></script>
 
         <link rel="Stylesheet" media="screen" href="css/theme_norm.css" type="text/css" />
 
