--- a/mashup/web/gadgets/files/container/home.html
+++ b/mashup/web/gadgets/files/container/home.html
@@ -4,6 +4,17 @@
 <head>
 <title>Oryx - MashUp</title>
 
+
+
+<script type="text/javascript" src="http://yui.yahooapis.com/2.8.1/build/yahoo-dom-event/yahoo-dom-event.js"></script> 
+<script type="text/javascript" src="http://yui.yahooapis.com/2.8.1/build/element/element-min.js"></script> 
+<script type="text/javascript" src="http://yui.yahooapis.com/2.8.1/build/uploader/uploader-min.js"></script> 
+
+<link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/2.8.1/build/fonts/fonts-min.css" /> 
+<link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/2.8.1/build/container/assets/skins/sam/container.css" /> 
+<script type="text/javascript" src="http://yui.yahooapis.com/2.8.1/build/yahoo-dom-event/yahoo-dom-event.js"></script> 
+<script type="text/javascript" src="http://yui.yahooapis.com/2.8.1/build/container/container-min.js"></script> 
+
 	<script type="text/javascript" src="http://yui.yahooapis.com/2.7.0/build/yuiloader/yuiloader.js" ></script>
 	<script type="text/javascript" src="main.js"> </script>
 	<script type="text/javascript" src="login.js"></script>
@@ -11,11 +22,38 @@
 	<script type="text/javascript" src="dispatcher.js"></script>
 	<script type="text/javascript" src="dashboard2.js"></script>
 	
+	
+	
 	<link rel="stylesheet" type="text/css" href="/backend/css/repository.css">
 	<link rel="stylesheet" type="text/css" href="dashboard.css">
 	
 	</head>
-	<body id = "container" >
+	<body id = "container" class="yui-skin-sam">
+		
+	
+	<style> 
+	.yui-overlay { position:absolute;background:#fff;border:1px dotted black;padding:5px;margin:10px; }
+	.yui-overlay .hd { border:1px solid red;padding:5px; }
+	.yui-overlay .bd { border:1px solid green;padding:5px; }
+	.yui-overlay .ft { border:1px solid blue;padding:5px; }
+ 
+	#ctx { background:orange;width:100px;height:25px; }
+	
+	#example {height:15em;}
+	</style> 
+	
+
+	
+
+
+
+
+ 
+ 
+
+
+
+	
 	
 	<div id="oryx_repository_header" onmouseover="this.className = 'mouseover';" onmouseout= "this.className = '';">
 		<a href="http://oryx-editor.org" target="_blank">
@@ -27,7 +65,21 @@
 		<div style="clear: both;"></div>
 	</div>
 		
-	<div id="dashboard"></div>
+	<div id="dashboard">
+			</div>
+	
+
+	
+	
+
+ 
+
 	
 	</body>
+	
+	
+ 
+
 </html>
+
+
